Fixed formatting, working on mobile design.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+ .App {
   text-align: center;
   height: 100%;
 }
@@ -8,28 +8,27 @@
   max-width: 800px;
   min-height: 500px;
   margin: auto;
-  grid-template-columns: 2fr 2fr;
-  grid-template-areas:
-    "a b"
-  ;
+  /*grid-template-columns: 2fr 2fr;*/
+  /*grid-template-areas:*/
+    /*"a b"*/
+  /*;*/
   padding-bottom: 8px;
   border: 8px;
 
 }
 
-.topSection  {
-  background-color: red;
-}
+/*.topSection  {*/
+/*}*/
 
-.leftSection, .rightSection {
-    padding: 8px;
+/*.leftSection, .rightSection {*/
+    /*padding: 8px;*/
 
-}
+/*}*/
 
-.leftSection {
-  grid-area: a;
-}
+/*.leftSection {*/
+  /*grid-area: a;*/
+/*}*/
 
-.rightSection {
-  grid-area: b;
-} */
+/*.rightSection {*/
+  /*grid-area: b;*/
+/*}*/
